--- a/src/App.scss
+++ b/src/App.scss
@@ -4,4 +4,91 @@
   align-items: center;
   margin: 0 auto;
   max-width: 1280px;
+
+  .App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    max-width: 100%;
+    width: 100%;
+    min-height: 100vh;
+    text-align: center;
+    color: white;
+    background-color: #2c2c2c;
+
+    .weather-app {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 100%;
+      width: 100%;
+
+      .weather-app__content {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        padding: 8px;
+        max-width: 380px;
+        width: 100%;
+        top: 50px;
+        right: 50px;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 8px;
+
+        .weather-app__content-inner {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+          .weather-app__content_text {
+            display: flex;
+            align-items: center;
+            padding: 8px;
+            border: none;
+            border-radius: 4px;
+            font-size: 16px;
+            font-family: "Inter", serif;
+            outline: none;
+
+            &::placeholder {
+              font-family: "Inter", serif;
+              font-size: 14px;
+              line-height: 40px;
+            }
+          }
+
+          .weather-app__content_btn {
+            padding: 8px;
+            border: none;
+            border-radius: 4px;
+            font-family: "Inter", serif;
+            font-size: 16px;
+            color: white;
+            background-color: rgb(52, 146, 55);
+            cursor: pointer;
+            transition: all 0.5s ease;
+
+            &:hover {
+              background-color: rgb(69, 160, 73);
+              box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.5);
+            }
+          }
+        }
+      }
+
+      .weather-app__err {
+        position: absolute;
+        padding: 10px;
+        max-width: 380px;
+        width: 100%;
+        top: 118px;
+        right: 50px;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 8px;
+        color: rgba(209, 44, 44, 0.7);
+      }
+    }
+  }
 }
