--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 5px;
     max-width: 100%;
     width: 100%;
     min-height: 100vh;
@@ -32,8 +32,8 @@
         padding: 8px;
         max-width: 380px;
         width: 100%;
-        top: 50px;
-        right: 50px;
+        top: 40px;
+        right: 0;
         border: 1px solid rgba(255, 255, 255, 0.1);
         border-radius: 8px;
 
@@ -46,6 +46,8 @@
             display: flex;
             align-items: center;
             padding: 8px;
+            max-width: 235px;
+            width: 100%;
             border: none;
             border-radius: 4px;
             font-size: 16px;
@@ -80,13 +82,14 @@
 
       .weather-app__err {
         position: absolute;
-        padding: 10px;
+        padding: 8px;
         max-width: 380px;
         width: 100%;
-        top: 118px;
-        right: 50px;
+        top: 100px;
+        right: 0;
         border: 1px solid rgba(255, 255, 255, 0.1);
         border-radius: 8px;
+        font-size: 16px;
         color: rgba(209, 44, 44, 0.7);
       }
     }
